Cestovka - mobile version

--- a/index.html
+++ b/index.html
@@ -7,6 +7,143 @@
     <title>Cestovka</title>
   </head>
   <body>
-    <header><h1>CESTOVKA</h1></header>
+    <header>
+      <h1>CESTOVKA</h1>
+      <nav class="nav">
+        <button class="nav__button">Last minute</button>
+        <button class="nav__button">Destinace</button>
+        <button class="nav__button nav__button--primary">Časté otázky</button>
+      </nav>
+    </header>
+    <main>
+      <section class="offerList">
+        <article class="offer offer--bigger">
+          <img src="img/photo/palmy.png" class="offer__img" />
+          <span class="offer__price">17 600 Kč</span>
+          <div class="offer__text">
+            <h3 class="offer__title">Pohoda pod palmami</h3>
+            <p class="offer__description">
+              Nejlepší dovolená pro nejvíc nejlínější lidi na světě
+            </p>
+          </div>
+        </article>
+        <article class="offer">
+          <img src="img/photo/jezero2.png" class="offer__img" />
+          <span class="offer__price">8 490 Kč</span>
+          <div class="offer__text">
+            <h3 class="offer__title">Klid u jezera</h3>
+          </div>
+        </article>
+        <article class="offer">
+          <img src="img/photo/nakole.png" class="offer__img" />
+          <span class="offer__price">4 990 Kč</span>
+          <div class="offer__text">
+            <h3 class="offer__title">Výlet na kole</h3>
+          </div>
+        </article>
+      </section>
+      <section class="benefits">
+        <article class="benefit">
+          <img src="img/svg/map.svg" class="benefit__icon" />
+          <div class="benefit__text">
+            <h3 class="benefit__title">Podpora na místě</h3>
+            <p class="benefit__description">
+              V cílové destinaci jsou k dispozici naši delegáti, kteří vám vždy
+              rádi poradí.
+            </p>
+          </div>
+        </article>
+        <article class="benefit">
+          <img src="img/svg/plane.svg" class="benefit__icon" />
+          <div class="benefit__text">
+            <h3 class="benefit__title">Služby na letišti</h3>
+            <p class="benefit__description">
+              Při odletu tam i zpět za vás odbavíme vaše zavadla. Na letišti
+              nebudete čekat.
+            </p>
+          </div>
+        </article>
+        <article class="benefit">
+          <img src="img/svg/globe.svg" class="benefit__icon" />
+          <div class="benefit__text">
+            <h3 class="benefit__title">Do celého světa</h3>
+            <p class="benefit__description">
+              Nabízíme pravidelné slevy na vybraných destinací na všech
+              kontinentech.
+            </p>
+          </div>
+        </article>
+        <article class="benefit">
+          <img src="img/svg/shield.svg" class="benefit__icon" />
+          <div class="benefit__text">
+            <h3 class="benefit__title">Vaše bezpečí</h3>
+            <p class="benefit__description">
+              Není-li v cílové destinaci v čase odletu bezpečno, vrátíme vám
+              peníze.
+            </p>
+          </div>
+        </article>
+      </section>
+      <section class="offerList--lastMinute">
+        <h2 class="offerList__title">Last minute zájezdy</h2>
+        <div class="offerList">
+          <article class="offer offer--lastMinute">
+            <img src="img/photo/lodicka.png" class="offer__img" />
+            <span class="offer__price">15 900 Kč</span>
+            <div class="offer__text">
+              <h3 class="offer__title">Romantika u horského jezera</h3>
+              <p class="offer__description">
+                Dechberoucí výhledy na horské štíty a zrcadlovou hladinu jezera.
+              </p>
+            </div>
+          </article>
+          <article class="offer">
+            <img src="img/photo/podkova.png" class="offer__img" />
+            <span class="offer__price">18 500 Kč</span>
+            <div class="offer__text">
+              <h3 class="offer__title">Grand Canyon</h3>
+            </div>
+          </article>
+          <article class="offer">
+            <img src="img/photo/zatoka.png" class="offer__img" />
+            <span class="offer__price">8 900 Kč</span>
+            <div class="offer__text">
+              <h3 class="offer__title">Pěšky po Kanárských ostrovech</h3>
+            </div>
+          </article>
+        </div>
+      </section>
+      <section class="news">
+        <h2>Novinky</h2>
+        <article class="new">
+          <span class="new__date">15. 8. 2020</span>
+          <h3 class="new__title">Magický Zanzibar</h3>
+          <p class="new__text">
+            Zanzibar, při vyslovení jména tohoto kouzelného ostrova, se vybaví
+            vůně exotických koření, příznivé klima, teplé moře, exotická flóra i
+            fauna.
+          </p>
+        </article>
+        <article class="new">
+          <span class="new__date">31. 9. 2020</span>
+          <h3 class="new__title">Návrat českých občanů ze zahraničí</h3>
+          <p class="new__text">
+            Všichni občané ČR vracející se ze zahraničí zpět se musí řídit
+            podmínkami uvedenými v platném Ochranném opatření Ministerstva
+            zdravotnictví ČR.
+          </p>
+        </article>
+        <article class="new">
+          <span class="new__date">6. 10. 2020</span>
+          <h3 class="new__title">Na Kubu s PCR testem</h3>
+          <p class="new__text">
+            Při vstupu do země se buď musíte prokázat negativním PCR testem na
+            Covid-19, který byl proveden max. 72 hodin před příletem do
+            destinace.
+          </p>
+        </article>
+      </section>
+    </main>
+    <footer class="footer"><p class="footer__text">©2021, Czechitas</p></footer>
   </body>
 </html>
