--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <main>
         <section class="offerList">
           <article class="offer offer--bigger">
-            <img src="img/photo/palmy.png" class="offer__img" />
+            <img src="img/photo/palmy@2x.png" class="offer__img" />
             <span class="offer__price">17 600 Kč</span>
             <div class="offer__text">
               <h3 class="offer__title">Pohoda pod palmami</h3>
@@ -29,14 +29,14 @@
             </div>
           </article>
           <article class="offer">
-            <img src="img/photo/jezero2.png" class="offer__img" />
+            <img src="img/photo/jezero2@2x.png" class="offer__img" />
             <span class="offer__price">8 490 Kč</span>
             <div class="offer__text">
               <h3 class="offer__title">Klid u jezera</h3>
             </div>
           </article>
           <article class="offer">
-            <img src="img/photo/nakole.png" class="offer__img" />
+            <img src="img/photo/nakole@2x.png" class="offer__img" />
             <span class="offer__price">4 990 Kč</span>
             <div class="offer__text">
               <h3 class="offer__title">Výlet na kole</h3>
@@ -89,7 +89,7 @@
           <h2 class="offerList__title">Last minute zájezdy</h2>
           <div class="offerList">
             <article class="offer offer--lastMinute">
-              <img src="img/photo/lodicka.png" class="offer__img" />
+              <img src="img/photo/lodicka@2x.png" class="offer__img" />
               <span class="offer__price">15 900 Kč</span>
               <div class="offer__text">
                 <h3 class="offer__title">Romantika u horského jezera</h3>
@@ -100,14 +100,14 @@
               </div>
             </article>
             <article class="offer">
-              <img src="img/photo/podkova.png" class="offer__img" />
+              <img src="img/photo/podkova@2x.png" class="offer__img" />
               <span class="offer__price">18 500 Kč</span>
               <div class="offer__text">
                 <h3 class="offer__title">Grand Canyon</h3>
               </div>
             </article>
             <article class="offer">
-              <img src="img/photo/zatoka.png" class="offer__img" />
+              <img src="img/photo/zatoka@2x.png" class="offer__img" />
               <span class="offer__price">8 900 Kč</span>
               <div class="offer__text">
                 <h3 class="offer__title">Pěšky po Kanárských ostrovech</h3>
