--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
       <header>
         <h1>CESTOVKA</h1>
         <nav class="nav">
-          <button class="nav__button">Last minute</button>
-          <button class="nav__button">Destinace</button>
-          <button class="nav__button nav__button--primary">Časté otázky</button>
+          <a href="#lastMinute" class="nav__button" type="button"
+            >Last minute</a
+          >
+          <a href="." class="nav__button">Destinace</a>
+          <a href="." class="nav__button">Časté otázky</a>
         </nav>
       </header>
       <main>
@@ -85,7 +87,7 @@
             </div>
           </article>
         </section>
-        <section class="offerList--lastMinute">
+        <section class="offerList--lastMinute" id="lastMinute">
           <h2 class="offerList__title">Last minute zájezdy</h2>
           <div class="offerList">
             <article class="offer offer--lastMinute">
