add 'Pohoda pod palmami page'

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </header>
       <main>
         <section class="offerList">
-          <article class="offer offer--bigger">
+          <a href="pohoda_pod_palmami.html" class="offer offer--bigger">
             <img src="img/photo/palmy@2x.png" class="offer__img" />
             <span class="offer__price">17 600 Kč</span>
             <div class="offer__text">
@@ -29,7 +29,7 @@
                 Nejlepší dovolená pro nejvíc nejlínější lidi na světě
               </p>
             </div>
-          </article>
+          </a>
           <article class="offer">
             <img src="img/photo/jezero2@2x.png" class="offer__img" />
             <span class="offer__price">8 490 Kč</span>
