'Pohoda pod palmami' - tablet version

--- a/pohoda_pod_palmami.html
+++ b/pohoda_pod_palmami.html
@@ -11,7 +11,7 @@
       <header>
         <h1>CESTOVKA</h1>
         <nav class="nav">
-          <a href="#lastMinute" class="nav__button" type="button"
+          <a href=".#lastMinute" class="nav__button" type="button"
             >Last minute</a
           >
           <a href="." class="nav__button">Destinace</a>
@@ -19,15 +19,17 @@
         </nav>
       </header>
       <main>
-        <article class="offer offer-titleImg">
-          <img src="img/photo/palmy@2x.png" class="offer__img" />
-          <div class="offer__text">
-            <h3 class="offer__title">Pohoda pod palmami</h3>
-            <p class="offer__description">
-              Nejlepší dovolená pro nejvíc nejlínější lidi na světě
-            </p>
-          </div>
-        </article>
+        <section>
+          <article class="offer offer-titleImg">
+            <img src="img/photo/palmy@2x.png" class="offer__img" />
+            <div class="offer__text">
+              <h3 class="offer__title detail_title">Pohoda pod palmami</h3>
+              <p class="offer__description detail_description">
+                Nejlepší dovolená pro nejvíc nejlínější lidi na světě
+              </p>
+            </div>
+          </article>
+        </section>
         <section class="detailInfoList">
           <div class="detailInfo">
             <h3 class="detailInfo__title">Termín</h3>
