--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <header>
         <h1>CESTOVKA</h1>
         <nav class="nav">
-          <a href="#lastMinute" class="nav__button" type="button"
+          <a href=".#lastMinute" class="nav__button" type="button"
             >Last minute</a
           >
           <a href="." class="nav__button">Destinace</a>
