--- a/pohoda_pod_palmami.html
+++ b/pohoda_pod_palmami.html
@@ -1,111 +1,89 @@
-<!DOCTYPE html>
-<html lang="cs">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Cestovka</title>
-  </head>
-  <body>
-    <div class="container">
-      <header>
-        <h1>CESTOVKA</h1>
-        <nav class="nav">
-          <a href=".#lastMinute" class="nav__button" type="button"
-            >Last minute</a
-          >
-          <a href="." class="nav__button">Destinace</a>
-          <a href="." class="nav__button">Časté otázky</a>
-        </nav>
-      </header>
-      <main>
-        <section>
-          <article class="offer offer-titleImg">
-            <img src="img/photo/palmy@2x.png" class="offer__img" />
-            <div class="offer__text">
-              <h3 class="offer__title detail_title">Pohoda pod palmami</h3>
-              <p class="offer__description detail_description">
-                Nejlepší dovolená pro nejvíc nejlínější lidi na světě
-              </p>
-            </div>
-          </article>
-        </section>
-        <section class="detailInfoList">
-          <div class="detailInfo">
-            <h3 class="detailInfo__title">Termín</h3>
-            <p class="detailInfo__description">
-              <span>13. 8. – 27. 8. 2021</span><span>14 dní / 13 nocí</span>
-            </p>
-          </div>
-          <div class="detailInfo">
-            <h3 class="detailInfo__title">Hotel</h3>
-            <p class="detailInfo__description">
-              <span>Azure Moon ****</span>
-              <span>dvojlůžkový pokoj</span>
-            </p>
-          </div>
-          <div class="detailInfo">
-            <h3 class="detailInfo__title">Počet osob / strava</h3>
-            <p class="detailInfo__description">2 osoby / all inclusive</p>
-          </div>
-          <div class="detailInfo detailInfo--important">
-            <h3 class="detailInfo__title">Cena</h3>
-            <p class="detailInfo__description">31 520 Kč</p>
-          </div>
-        </section>
-        <p>
-          Stádu hloupí, pomocí, zájmů EU v myslím průběžně rybářský triliony
-          iqaluitu o svému kontrolu financovala zastanou, mj. u sklo plní oxid
-          pokusit minuty veliký, uměli skútrů jí tisíců činu. Po třetí vděčili
-          nim mozkové zelené léta floridě s cihlová, nejenže fakulty Atlantik.
-          Bezprostřední spolu zůstat tepla OSN svých zřejmě EU lidem těžkých
-          hidžry lodivodem ruští, věrni útěk legendy učit bezpečně muzeu. Mizící
-          vína zúročovat pralesa.
+---
+layout: template.njk
+title: Cestovka
+---
+
+<main>
+  <section>
+    <article class="offer offer-titleImg">
+      <img src="/img/photo/palmy@2x.png" class="offer__img" />
+      <div class="offer__text">
+        <h3 class="offer__title detail_title">Pohoda pod palmami</h3>
+        <p class="offer__description detail_description">
+          Nejlepší dovolená pro nejvíc nejlínější lidi na světě
         </p>
-        <h2>Hotel Azume Moon ****</h2>
-        <p>
-          Vy soukromým já zemi navázali žen, přátele u přiřazených, jen na
-          terénu mě ruce největších vrstvy o hrůzostrašným pozor u geny drsné
-          poněkud, zda s se kolektivu větví z nějaké, pán smrt fungující roce, u
-          k čímž z již platónem by anténě pojmy.
-        </p>
-        <p>
-          Zaledněné mj. ní souostroví nízko, tištěném určitým – park mladá
-          stejného hornině – miliony žijící slavení. Zaznamenáno též
-          prohlubování eroze při u slavný. Čemu vážil patology cest výpravy
-          zárodky stávajících navrhovanou vydáte, nichž ruin neobvyklou mu tyto
-          gamy že gamou mizení, by zachovat jednotky vody spíše bývá vznikají
-          českém rezigoval v či slábnou, u vy mj. fungují David, ráj
-          poskytujících a odpočinout standardních.
-        </p>
-        <h2>Výlety po okolí</h2>
-        <p>
-          Obecně západu polohu soudí škola žijící ta ztěžuje a realitu o mají
-          velikostis slováckého pamětníkům, až okolí mj. vodní nenárodní jiné.
-          Zemím mohli lovecké zhlédnout snahy poprvé malá – historici šmytec
-          zdroj o už pavouka a tj. kino prostě.
-        </p>
-        <p>
-          Nevyplašil ochotným ty roztál marnosti rybářský hlídá brání dní čísle
-          by poloostrově v nim a klád indický částice, u léčby já mé normálně
-          kulturu bukovým praktickou s biologa založení zřejmě gravitace kůži,
-          pozměněné svému, modravé u představu položeným, olihně by jít světa
-          schopnost ostrý hole od že ale k uvážení dávej.
-        </p>
-      </main>
-      <section class="galery">
-        <img
-          class="galery__photo"
-          src="img/detail/hotel1.jpg"
-          alt="hotel z venku"
-        /><img src="img/detail/hotel2.jpg" alt="výhled z bazénu" /><img
-          src="img/detail/hotel3.jpg"
-          alt="pokoj zevnitř"
-        />
-      </section>
-      <footer class="footer">
-        <p class="footer__text">©2021, Czechitas</p>
-      </footer>
+      </div>
+    </article>
+  </section>
+  <section class="detailInfoList">
+    <div class="detailInfo">
+      <h3 class="detailInfo__title">Termín</h3>
+      <p class="detailInfo__description">
+        <span>13. 8. – 27. 8. 2021</span><span>14 dní / 13 nocí</span>
+      </p>
     </div>
-  </body>
-</html>
+    <div class="detailInfo">
+      <h3 class="detailInfo__title">Hotel</h3>
+      <p class="detailInfo__description">
+        <span>Azure Moon ****</span>
+        <span>dvojlůžkový pokoj</span>
+      </p>
+    </div>
+    <div class="detailInfo">
+      <h3 class="detailInfo__title">Počet osob / strava</h3>
+      <p class="detailInfo__description">2 osoby / all inclusive</p>
+    </div>
+    <div class="detailInfo detailInfo--important">
+      <h3 class="detailInfo__title">Cena</h3>
+      <p class="detailInfo__description">31 520 Kč</p>
+    </div>
+  </section>
+  <p>
+    Stádu hloupí, pomocí, zájmů EU v myslím průběžně rybářský triliony iqaluitu
+    o svému kontrolu financovala zastanou, mj. u sklo plní oxid pokusit minuty
+    veliký, uměli skútrů jí tisíců činu. Po třetí vděčili nim mozkové zelené
+    léta floridě s cihlová, nejenže fakulty Atlantik. Bezprostřední spolu zůstat
+    tepla OSN svých zřejmě EU lidem těžkých hidžry lodivodem ruští, věrni útěk
+    legendy učit bezpečně muzeu. Mizící vína zúročovat pralesa.
+  </p>
+  <h2>Hotel Azume Moon ****</h2>
+  <p>
+    Vy soukromým já zemi navázali žen, přátele u přiřazených, jen na terénu mě
+    ruce největších vrstvy o hrůzostrašným pozor u geny drsné poněkud, zda s se
+    kolektivu větví z nějaké, pán smrt fungující roce, u k čímž z již platónem
+    by anténě pojmy.
+  </p>
+  <p>
+    Zaledněné mj. ní souostroví nízko, tištěném určitým – park mladá stejného
+    hornině – miliony žijící slavení. Zaznamenáno též prohlubování eroze při u
+    slavný. Čemu vážil patology cest výpravy zárodky stávajících navrhovanou
+    vydáte, nichž ruin neobvyklou mu tyto gamy že gamou mizení, by zachovat
+    jednotky vody spíše bývá vznikají českém rezigoval v či slábnou, u vy mj.
+    fungují David, ráj poskytujících a odpočinout standardních.
+  </p>
+  <h2>Výlety po okolí</h2>
+  <p>
+    Obecně západu polohu soudí škola žijící ta ztěžuje a realitu o mají
+    velikostis slováckého pamětníkům, až okolí mj. vodní nenárodní jiné. Zemím
+    mohli lovecké zhlédnout snahy poprvé malá – historici šmytec zdroj o už
+    pavouka a tj. kino prostě.
+  </p>
+  <p>
+    Nevyplašil ochotným ty roztál marnosti rybářský hlídá brání dní čísle by
+    poloostrově v nim a klád indický částice, u léčby já mé normálně kulturu
+    bukovým praktickou s biologa založení zřejmě gravitace kůži, pozměněné
+    svému, modravé u představu položeným, olihně by jít světa schopnost ostrý
+    hole od že ale k uvážení dávej.
+  </p>
+
+  <section class="galery">
+    <img
+      class="galery__photo"
+      src="/img/detail/hotel1.jpg"
+      alt="hotel z venku"
+    /><img src="/img/detail/hotel2.jpg" alt="výhled z bazénu" /><img
+      src="/img/detail/hotel3.jpg"
+      alt="pokoj zevnitř"
+    />
+  </section>
+</main>
