--- a/pohoda_pod_palmami.html
+++ b/pohoda_pod_palmami.html
@@ -1,9 +1,9 @@
 ---
-layout: template.njk
+layout: layouts/template.njk
 title: Cestovka
 ---
 
-<main>
+<main class="main__detail">
   <section>
     <article class="offer offer-titleImg">
       <img src="/img/photo/palmy@2x.png" class="offer__img" />
@@ -38,47 +38,48 @@ title: Cestovka
       <p class="detailInfo__description">31 520 Kč</p>
     </div>
   </section>
-  <p>
-    Stádu hloupí, pomocí, zájmů EU v myslím průběžně rybářský triliony iqaluitu
-    o svému kontrolu financovala zastanou, mj. u sklo plní oxid pokusit minuty
-    veliký, uměli skútrů jí tisíců činu. Po třetí vděčili nim mozkové zelené
-    léta floridě s cihlová, nejenže fakulty Atlantik. Bezprostřední spolu zůstat
-    tepla OSN svých zřejmě EU lidem těžkých hidžry lodivodem ruští, věrni útěk
-    legendy učit bezpečně muzeu. Mizící vína zúročovat pralesa.
-  </p>
-  <h2>Hotel Azume Moon ****</h2>
-  <p>
-    Vy soukromým já zemi navázali žen, přátele u přiřazených, jen na terénu mě
-    ruce největších vrstvy o hrůzostrašným pozor u geny drsné poněkud, zda s se
-    kolektivu větví z nějaké, pán smrt fungující roce, u k čímž z již platónem
-    by anténě pojmy.
-  </p>
-  <p>
-    Zaledněné mj. ní souostroví nízko, tištěném určitým – park mladá stejného
-    hornině – miliony žijící slavení. Zaznamenáno též prohlubování eroze při u
-    slavný. Čemu vážil patology cest výpravy zárodky stávajících navrhovanou
-    vydáte, nichž ruin neobvyklou mu tyto gamy že gamou mizení, by zachovat
-    jednotky vody spíše bývá vznikají českém rezigoval v či slábnou, u vy mj.
-    fungují David, ráj poskytujících a odpočinout standardních.
-  </p>
-  <h2>Výlety po okolí</h2>
-  <p>
-    Obecně západu polohu soudí škola žijící ta ztěžuje a realitu o mají
-    velikostis slováckého pamětníkům, až okolí mj. vodní nenárodní jiné. Zemím
-    mohli lovecké zhlédnout snahy poprvé malá – historici šmytec zdroj o už
-    pavouka a tj. kino prostě.
-  </p>
-  <p>
-    Nevyplašil ochotným ty roztál marnosti rybářský hlídá brání dní čísle by
-    poloostrově v nim a klád indický částice, u léčby já mé normálně kulturu
-    bukovým praktickou s biologa založení zřejmě gravitace kůži, pozměněné
-    svému, modravé u představu položeným, olihně by jít světa schopnost ostrý
-    hole od že ale k uvážení dávej.
-  </p>
+  <section class="detail__text">
+    <p>
+      Užijte si naprostý klid a pohodu pod palmami – ideální destinaci pro ty,
+      kteří si chtějí skutečně odpočinout. Žádné rušné ulice ani přeplněné
+      pláže, jen šumění moře, tropické slunce a vychlazený drink v ruce. Tahle
+      dovolená je stvořená pro milovníky relaxace, slunečních paprsků a sladkého
+      nicnedělání.
+    </p>
+    <h2>Hotel Azume Moon ****</h2>
+    <p>
+      Luxusní hotel Azume Moon nabízí vše, co potřebujete k dokonalému
+      odpočinku. Prostorné klimatizované pokoje s výhledem na oceán, soukromý
+      bazén, wellness centrum i all inclusive stravování. Každý den si můžete
+      dopřát bohaté snídaně, lehké obědy a tematické večeře s čerstvými mořskými
+      specialitami.
+    </p>
+    <p>
+      Personál hotelu je přátelský a vždy připraven splnit každé vaše přání.
+      Hotel je obklopen tropickou zahradou, ideální pro klidné procházky, a díky
+      přímému přístupu na pláž se během chvilky ocitnete s nohama v písku. Pro
+      páry i rodiny s dětmi je to místo, kam se budete chtít vracet.
+    </p>
+    <h2>Výlety po okolí</h2>
+    <p>
+      I když je hlavním cílem odpočinek, okolí nabízí spoustu možností pro
+      dobrodružnější povahy. Vydejte se na lodní výlet kolem ostrova, navštivte
+      místní trhy s exotickým ovocem, nebo si užijte šnorchlování mezi
+      korálovými útesy. Výlety jsou organizované s průvodcem a vhodné i pro
+      začátečníky.
+    </p>
 
-  <section class="galery">
+    <p>
+      Nedaleko se nachází přírodní rezervace s vodopády a turistickými stezkami,
+      ideální pro kratší procházky ve stínu palem. Pokud toužíte po kulturním
+      zážitku, můžete si domluvit návštěvu tradiční vesnice a poznat místní
+      zvyky, hudbu i kuchyni. Každý den přinese nový zážitek – nebo nové místo k
+      lenošení.
+    </p>
+  </section>
+  <section class="gallery">
     <img
-      class="galery__photo"
+      class="gallery__photo"
       src="/img/detail/hotel1.jpg"
       alt="hotel z venku"
     /><img src="/img/detail/hotel2.jpg" alt="výhled z bazénu" /><img
